============================== 0.2.37 ===========================

2007-01-31  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.ac: Use pkg-config to check for audiofile.
	Patch from Frederic Peters. Closes bug #350808.

2007-01-07  Kjartan Maraas  <kmaraas@gnome.org>

	* docs/esdsample.1.in: Updated man page from
	Christopher Hanna. Closes bug #329631.

2007-01-05  Kjartan Maraas  <kmaraas@gnome.org>

	* docs/esdcat.1.in: Updated man page.
	* docs/esdrec.1.in: Updated man page.
	Patches from Christopher Hanna at sun com.
	Closes bug #329626 and bug #329628.

2006-08-08  David Schleef  <ds@schleef.org>

	* esddsp.c: intercept open64() and other 64-bit variants.
	  Patch from Peter Åstrand.  Fixes #312665.

2006-08-07  David Schleef  <ds@schleef.org>

	* configure.ac: Fix linker flags with CoreAudio.  Fixes #313433.

2006-08-07  David Schleef  <ds@schleef.org>

	* players.c: Add check for return value of read.  Patch from
	  Fernando Herrera.  Fixes #337415.

2006-08-07  David Schleef  <ds@schleef.org>

	* players.c: Add checks for client disconnecting.  Patch from
	  Peter Åstrand.  Fixes #322206.

2006-08-07  David Schleef  <ds@schleef.org>

	* configure.ac: Check for audiofile.h.  Fixes #319464.

2006-08-07  David Schleef  <ds@schleef.org>

	* esd.c: Remove bogus call to hstrerror().  Fixes #319968.

2006-08-07  David Schleef  <ds@schleef.org>

	* esd.c: Don't terminate until last sample is finished playing.
	  Fixes #342729.

2006-08-07  David Schleef  <ds@schleef.org>

	* esd.c: close master socket in error cases. Fixes #314407.

2006-08-07  David Schleef  <ds@schleef.org>

	* esd.c: Close file descriptors after startup.  Fixes #333186.

2006-08-07  David Schleef  <ds@schleef.org>

	* esd.conf: Turn autospawning off by default.  Don't use
	  autospawning.  It doesn't work, and it isn't possible to
	  make it work.  esd should always be started from the session
	  manager.
	* esd_config.c:

2006-05-10  David Schleef  <ds@schleef.org>
